Began some graph explorations on writers/directors
and some other changes

--- a/Movie and Writer graph exploration.ipynb
+++ b/Movie and Writer graph exploration.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import networkx as nx\n",
@@ -17,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +156,7 @@
        "[5 rows x 14 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,25 +164,22 @@
    "source": [
     "metadata_df = pd.read_csv(\"data/network_metadata.tab\", sep=\"\\t\")\n",
     "metadata_df.loc[:, \"IMDB_id\"] = metadata_df[\"IMDB_id\"].str[2:].astype('int')\n",
-    "metadata_df.head()"
+    "# metadata_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "imdb_data_df = pd.read_json(\"data/gexf_imdb_metadata.json\", orient='index')\n",
-    "# imdb_data_df"
+    "imdb_data_df = pd.read_json(\"data/gexf_imdb_metadata.json\", orient='index')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -202,34 +197,7 @@
     "df = pd.merge(metadata_df, imdb_data_df, left_on=\"IMDB_id\", right_on=\"movie_id\")\n",
     "df.loc[:,'directors-writers'] = df.loc[:,'directors'] + df.loc[:,'writers']\n",
     "for i in range(len(df)):\n",
-    "    df.loc[:,'directors-writers'][i] = list(set(df.loc[:,'directors-writers'][i]))\n",
-    "# df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# A graph where nodes are movie titles and are conneted if they share a director or a writer.\n",
-    "Movies_Graph = nx.Graph()\n",
-    "titles = df.loc[:,'Title']\n",
-    "for title in titles:\n",
-    "    Movies_Graph.add_node(title)\n",
-    "\n",
-    "    \n",
-    "# Add node if two movies share a director or a writer\n",
-    "# Edge weight = number of directors/writers in common \n",
-    "for i in range(len(df)):\n",
-    "    for j in range(i+1, len(df)):\n",
-    "        title_i = titles[i]\n",
-    "        title_j = titles[j]\n",
-    "        dirwri_i = df.loc[i,'directors-writers']\n",
-    "        dirwri_j = df.loc[j,'directors-writers']\n",
-    "        intersection = set.intersection(set(dirwri_i), set(dirwri_j))\n",
-    "        if intersection:\n",
-    "            Movies_Graph.add_edge(title_i, title_j, weight=len(intersection))"
+    "    df.loc[:,'directors-writers'][i] = list(set(df.loc[:,'directors-writers'][i]))"
    ]
   },
   {
@@ -238,163 +206,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Map node name to node_name, for saving\n",
+    "# Load Movies Graph and relabel nodes\n",
+    "Movies_Graph = nx.read_adjlist(\"data/movies_graph.adjlist\")\n",
     "mapping = {}\n",
     "for node in Movies_Graph:\n",
-    "    mapping[node] = str(node).replace(\" \", \"_\")\n",
+    "    mapping[node] = str(node).replace(\"_\", \" \")\n",
     "\n",
     "\n",
-    "H=nx.relabel_nodes(Movies_Graph, mapping)\n",
-    "nx.write_adjlist(H, \"data/movies_graph.adjlist\")"
+    "Movies_Graph=nx.relabel_nodes(Movies_Graph, mapping)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "773\n"
-     ]
-    }
-   ],
-   "source": [
-    "# make subset of G that is ~50 nodes\n",
-    "Movies_Graph_subset = copy.deepcopy(Movies_Graph)\n",
-    "i=0\n",
-    "for node in Movies_Graph:\n",
-    "    if Movies_Graph.degree(node) < 12:\n",
-    "        Movies_Graph_subset.remove_node(node)\n",
-    "\n",
-    "# print(len(Movies_Graph))\n",
-    "# print(len(Movies_Graph_subset))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## A graph where nodes are directors or writers and are connected if they have collaborated on a movie\n",
-    "\n",
-    "# Get all unique directors and writers\n",
-    "writer_movies_map = {}\n",
-    "Writers_Graph = nx.Graph()\n",
-    "Directors_writers_unique = set()\n",
-    "for dw_list in df.loc[:,'directors-writers']:\n",
-    "    for dw in dw_list:\n",
-    "        Directors_writers_unique.add(dw)\n",
-    "        \n",
-    "# Add all writer nodes and make dictionary for every movie worked on by said writer\n",
-    "for dw in Directors_writers_unique:\n",
-    "    writer_movies_map[dw] = []\n",
-    "    Writers_Graph.add_node(dw)\n",
-    "    for i in range(len(df)):\n",
-    "        if dw in df.loc[i,'directors-writers']:\n",
-    "            writer_movies_map.get(dw).append(df.loc[i,'Title'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "writers = list(writer_movies_map.keys())\n",
-    "\n",
-    "# Add edges between writers with weight equal to the number of movies they have collaborated on\n",
-    "for i in range(len(writers)):\n",
-    "    for j in range(i+1, len(writers)):\n",
-    "        writer_i = writers[i]\n",
-    "        writer_j = writers[j]\n",
-    "        movies_i = writer_movies_map[writer_i]\n",
-    "        movies_j = writer_movies_map[writer_j]\n",
-    "        intersection = set.intersection(set(movies_i), set(movies_j))\n",
-    "        if intersection:\n",
-    "            Writers_Graph.add_edge(writer_i, writer_j, weight=len(intersection))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Map node name to node_name, for saving\n",
+    "# Load Writers Graph and relabel nodes\n",
+    "Writers_Graph = nx.read_adjlist(\"data/writers_graph.adjlist\")\n",
     "mapping = {}\n",
     "for node in Writers_Graph:\n",
-    "    mapping[node] = str(node).replace(\" \", \"_\")\n",
+    "    mapping[node] = str(node).replace(\"_\", \" \")\n",
     "\n",
     "\n",
-    "H=nx.relabel_nodes(Writers_Graph, mapping)\n",
-    "nx.write_adjlist(H, \"data/writers_graph.adjlist\")"
+    "Writers_Graph=nx.relabel_nodes(Writers_Graph, mapping)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1461\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print(len(Writers_Graph))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def draw_connection_with_edges(G, min_weight=None, max_weight=None, figsize=None, layout=None,\n",
-    "                               c=100, font_size=16, font_color='orange'):\n",
-    "    if figsize is not None:\n",
-    "        plt.figure(figsize=figsize)\n",
-    "        \n",
-    "    pos = layout or nx.random_layout(G)\n",
-    "    \n",
-    "    weights = {(u, v): d[\"weight\"] for (u, v, d) in G.edges(data=True)}\n",
-    "    if min_weight is not None:\n",
-    "        weights = {k: v for k, v in weights.items() if v > min_weight}\n",
-    "    if max_weight is not None:\n",
-    "        weights = {k: v for k, v in weights.items() if v <= max_weight}\n",
-    "    filtered_edges = list(weights.keys())\n",
-    "    \n",
-    "    t = np.array(list(weights.values()))\n",
-    "    normalized_weights = c*t/t.sum()\n",
-    "\n",
-    "    nx.draw(G, pos=pos, edgelist=filtered_edges, font_color=font_color, width=normalized_weights,\n",
-    "            with_labels=True, font_weight='bold', font_size=font_size)\n",
-    "\n",
-    "    nx.draw_networkx_edge_labels(G,\n",
-    "                                 pos=pos,\n",
-    "                                 edge_labels=weights)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# draw_connection_with_edges(Writers_Graph, min_weight=2, c=10, font_size=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +243,7 @@
        "'\\nfor i in range(20):\\n    print(f\"{all_writers_sorted[i]}, degree: {Writers_Graph.degree(all_writers_sorted[i])}\")\\n'"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +251,7 @@
    "source": [
     "# Writers ordered by most connections\n",
     "all_writers = list(Writers_Graph.nodes())\n",
-    "all_writers_sorted = sorted(all_writers, key=lambda x: Writers_Graph.degree(x), reverse=True)                  \n",
+    "all_writers_sorted = sorted(all_writers, key=lambda x: Writers_Graph.degree(x), reverse=True)\n",
     "'''\n",
     "for i in range(20):\n",
     "    print(f\"{all_writers_sorted[i]}, degree: {Writers_Graph.degree(all_writers_sorted[i])}\")\n",
@@ -420,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +269,7 @@
        "'\\nfor i in range(20):\\n    print(f\"{all_movies_sorted[i]}, degree: {Movies_Graph.degree(all_movies_sorted[i])}\")\\n'"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,10 +286,58 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "273"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find communities among movies\n",
+    "movie_communities = sorted(list(nx.algorithms.community.modularity_max.greedy_modularity_communities(Movies_Graph)),\n",
+    "                          key=lambda x: len(x), reverse=True)\n",
+    "len(movie_communities)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find communities among writers\n",
+    "writer_communities = sorted(list(nx.algorithms.community.modularity_max.greedy_modularity_communities(Writers_Graph)), \n",
+    "                     key=lambda x: len(x), reverse=True)\n",
+    "len(writer_communities)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Onion Decomposition"
+   ]
   }
  ],
  "metadata": {
