Added Director summaty notebook
presenting data on each director, showcasing differences in average graph structure between directors
/ and some changes

--- a/Directors and writers.ipynb
+++ b/Directors and writers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 119,
    "metadata": {
     "scrolled": true
    },
@@ -12,12 +12,15 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import copy"
+    "import copy\n",
+    "from statistics import mean\n",
+    "import json\n",
+    "import pickle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +161,7 @@
        "[5 rows x 14 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,10 +237,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "# Map node name to node_name, for saving\n",
     "mapping = {}\n",
     "for node in Movies_Graph:\n",
@@ -245,23 +249,17 @@
     "\n",
     "\n",
     "H=nx.relabel_nodes(Movies_Graph, mapping)\n",
-    "nx.write_adjlist(H, \"data/movies_graph.adjlist\")"
+    "nx.write_adjlist(H, \"data/movies_graph.adjlist\")\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "773\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "'''\n",
     "# make subset of G that is ~50 nodes\n",
     "Movies_Graph_subset = copy.deepcopy(Movies_Graph)\n",
     "i=0\n",
@@ -270,12 +268,13 @@
     "        Movies_Graph_subset.remove_node(node)\n",
     "\n",
     "# print(len(Movies_Graph))\n",
-    "# print(len(Movies_Graph_subset))"
+    "# print(len(Movies_Graph_subset))\n",
+    "'''"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,10 +299,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [],
    "source": [
+    "director_movies_map = {}\n",
+    "directors_unique = set()\n",
+    "for d_list in df.loc[:,'directors']:\n",
+    "    for d in d_list:\n",
+    "        directors_unique.add(d)\n",
+    "        \n",
+    "for d in directors_unique:\n",
+    "    director_movies_map[d] = []\n",
+    "    for i in range(len(df)):\n",
+    "        if d in df.loc[i,'directors']:\n",
+    "            director_movies_map.get(d).append(df.loc[i,'Title'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''\n",
     "writers = list(writer_movies_map.keys())\n",
     "\n",
     "# Add edges between writers with weight equal to the number of movies they have collaborated on\n",
@@ -315,7 +334,8 @@
     "        movies_j = writer_movies_map[writer_j]\n",
     "        intersection = set.intersection(set(movies_i), set(movies_j))\n",
     "        if intersection:\n",
-    "            Writers_Graph.add_edge(writer_i, writer_j, weight=len(intersection))"
+    "            Writers_Graph.add_edge(writer_i, writer_j, weight=len(intersection))\n",
+    "'''"
    ]
   },
   {
@@ -324,6 +344,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "# Map node name to node_name, for saving\n",
     "mapping = {}\n",
     "for node in Writers_Graph:\n",
@@ -331,7 +352,8 @@
     "\n",
     "\n",
     "H=nx.relabel_nodes(Writers_Graph, mapping)\n",
-    "nx.write_adjlist(H, \"data/writers_graph.adjlist\")"
+    "nx.write_adjlist(H, \"data/writers_graph.adjlist\")\n",
+    "'''"
    ]
   },
   {
@@ -394,62 +416,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
+   "execution_count": 58,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\nfor i in range(20):\\n    print(f\"{all_writers_sorted[i]}, degree: {Writers_Graph.degree(all_writers_sorted[i])}\")\\n'"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Steven Spielberg, degree: 22\n",
+      "Ridley Scott, degree: 20\n",
+      "Ronald Shusett, degree: 19\n",
+      "David Koepp, degree: 19\n",
+      "Dan O'Bannon, degree: 17\n",
+      "Michael Mann, degree: 16\n",
+      "Brian De Palma, degree: 16\n",
+      "James Cameron, degree: 15\n",
+      "David Fincher, degree: 15\n",
+      "George Lucas, degree: 15\n"
+     ]
     }
    ],
    "source": [
     "# Writers ordered by most connections\n",
     "all_writers = list(Writers_Graph.nodes())\n",
     "all_writers_sorted = sorted(all_writers, key=lambda x: Writers_Graph.degree(x), reverse=True)                  \n",
-    "'''\n",
-    "for i in range(20):\n",
-    "    print(f\"{all_writers_sorted[i]}, degree: {Writers_Graph.degree(all_writers_sorted[i])}\")\n",
-    "'''"
+    "\n",
+    "for i in range(10):\n",
+    "    print(f\"{all_writers_sorted[i]}, degree: {Writers_Graph.degree(all_writers_sorted[i])}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\nfor i in range(20):\\n    print(f\"{all_movies_sorted[i]}, degree: {Movies_Graph.degree(all_movies_sorted[i])}\")\\n'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indiana Jones and the Kingdom of the Crystal Skull, degree: 22\n",
+      "Raiders of the Lost Ark, degree: 20\n",
+      "Mission: Impossible, degree: 20\n",
+      "Jurassic Park, degree: 18\n",
+      "The Lost World: Jurassic Park, degree: 18\n",
+      "War of the Worlds, degree: 18\n",
+      "Indiana Jones and the Last Crusade, degree: 17\n",
+      "Aliens, degree: 16\n",
+      "Indiana Jones and the Temple of Doom, degree: 16\n",
+      "Minority Report, degree: 16\n"
+     ]
     }
    ],
    "source": [
     "# Movies ordered by most connections\n",
     "all_movies = list(Movies_Graph.nodes())\n",
     "all_movies_sorted = sorted(all_movies, key=lambda x: Movies_Graph.degree(x), reverse=True)                  \n",
-    "'''\n",
-    "for i in range(20):\n",
-    "    print(f\"{all_movies_sorted[i]}, degree: {Movies_Graph.degree(all_movies_sorted[i])}\")\n",
-    "'''"
+    "\n",
+    "for i in range(10):\n",
+    "    print(f\"{all_movies_sorted[i]}, degree: {Movies_Graph.degree(all_movies_sorted[i])}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# For a given writer, compile some statistics about the movies he/she has made\n",
+    "def get_writer_data(writer=\"Steven Spielberg\"):\n",
+    "    director = writer\n",
+    "    stats = {\n",
+    "        \"director\": director,\n",
+    "        \"number_of_movies\": 0,\n",
+    "        \"number_of_characters\": [],\n",
+    "        \"number_of_communities\": [],\n",
+    "        \"clustering\": [],\n",
+    "        \"modularity\": [],\n",
+    "        \"diameter\": [],\n",
+    "        \"density\": []\n",
+    "    }\n",
+    "\n",
+    "    movies = director_movies_map[director]\n",
+    "    for movie in movies:\n",
+    "        for i in range(len(df)):\n",
+    "            if df.loc[i,\"Title\"] == movie:\n",
+    "                gexf_id = df.loc[i,\"GexfID\"]\n",
+    "                index = i\n",
+    "                break\n",
+    "        G = nx.read_gexf(f\"data/gexf/{gexf_id}.gexf\", relabel=True)\n",
+    "        # find out stuff about the graph here and save it\n",
+    "        stats[\"number_of_characters\"].append(df.loc[index, \"Characters\"])\n",
+    "        stats[\"number_of_communities\"].append(len(list(nx.algorithms.community.modularity_max.greedy_modularity_communities(G))))\n",
+    "        stats[\"clustering\"].append(float(df.loc[index, \"ClusteringCoefficient\"].replace(',','.')))\n",
+    "        stats[\"modularity\"].append(float(df.loc[index, \"Modularity\"].replace(',','.')))\n",
+    "        stats[\"diameter\"].append(float(df.loc[index, \"Diameter\"].replace(',','.')))\n",
+    "        stats[\"density\"].append(float(df.loc[index, \"Density\"].replace(',','.')))\n",
+    "        stats[\"number_of_movies\"] =stats[\"number_of_movies\"] + 1\n",
+    "    \n",
+    "    return stats\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "All_Directors = {}\n",
+    "for director in director_movies_map.keys():\n",
+    "    All_Directors[director]=get_writer_data(director)\n",
+    "with open('data/director_summary.p', 'wb') as fp:\n",
+    "    pickle.dump(All_Directors, fp, protocol=pickle.HIGHEST_PROTOCOL)"
+   ]
   }
  ],
  "metadata": {
