Cleaned up, this creates director data file

--- a/Directors and writers.ipynb
+++ b/Directors and writers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -20,161 +20,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>GexfID</th>\n",
-       "      <th>Title</th>\n",
-       "      <th>IMDB_id</th>\n",
-       "      <th>ReleaseDate</th>\n",
-       "      <th>Slug</th>\n",
-       "      <th>WeightedDegree</th>\n",
-       "      <th>Modularity</th>\n",
-       "      <th>PathLength</th>\n",
-       "      <th>Diameter</th>\n",
-       "      <th>ClusteringCoefficient</th>\n",
-       "      <th>ConnectedComponents</th>\n",
-       "      <th>Density</th>\n",
-       "      <th>Edges</th>\n",
-       "      <th>Characters</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>10 Things I Hate About You</td>\n",
-       "      <td>147800</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>10-Things-I-Hate-About-You</td>\n",
-       "      <td>13,040</td>\n",
-       "      <td>0,194</td>\n",
-       "      <td>1,779</td>\n",
-       "      <td>3,000</td>\n",
-       "      <td>0,567</td>\n",
-       "      <td>3,000</td>\n",
-       "      <td>0,233</td>\n",
-       "      <td>225</td>\n",
-       "      <td>25</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>12</td>\n",
-       "      <td>488478</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>12</td>\n",
-       "      <td>4,227</td>\n",
-       "      <td>0,517</td>\n",
-       "      <td>2,170</td>\n",
-       "      <td>3,000</td>\n",
-       "      <td>0,610</td>\n",
-       "      <td>6,000</td>\n",
-       "      <td>0,077</td>\n",
-       "      <td>102</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Twelve and Holding</td>\n",
-       "      <td>417385</td>\n",
-       "      <td>2005</td>\n",
-       "      <td>Twelve-and-Holding</td>\n",
-       "      <td>7,333</td>\n",
-       "      <td>0,473</td>\n",
-       "      <td>2,449</td>\n",
-       "      <td>4,000</td>\n",
-       "      <td>0,593</td>\n",
-       "      <td>2,000</td>\n",
-       "      <td>0,140</td>\n",
-       "      <td>139</td>\n",
-       "      <td>26</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>5</td>\n",
-       "      <td>127 Hours</td>\n",
-       "      <td>1542344</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>127-Hours</td>\n",
-       "      <td>3,833</td>\n",
-       "      <td>0,160</td>\n",
-       "      <td>1,722</td>\n",
-       "      <td>2,000</td>\n",
-       "      <td>0,339</td>\n",
-       "      <td>4,000</td>\n",
-       "      <td>0,152</td>\n",
-       "      <td>33</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>6</td>\n",
-       "      <td>1492: Conquest of Paradise</td>\n",
-       "      <td>103594</td>\n",
-       "      <td>1992</td>\n",
-       "      <td>1492:-Conquest-of-Paradise</td>\n",
-       "      <td>7,941</td>\n",
-       "      <td>0,350</td>\n",
-       "      <td>2,043</td>\n",
-       "      <td>4,000</td>\n",
-       "      <td>0,705</td>\n",
-       "      <td>1,000</td>\n",
-       "      <td>0,153</td>\n",
-       "      <td>164</td>\n",
-       "      <td>34</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   GexfID                       Title  IMDB_id  ReleaseDate  ... ConnectedComponents Density Edges Characters\n",
-       "0       1  10 Things I Hate About You   147800         1999  ...               3,000   0,233   225         25\n",
-       "1       2                          12   488478         2007  ...               6,000   0,077   102         42\n",
-       "2       3          Twelve and Holding   417385         2005  ...               2,000   0,140   139         26\n",
-       "3       5                   127 Hours  1542344         2010  ...               4,000   0,152    33         11\n",
-       "4       6  1492: Conquest of Paradise   103594         1992  ...               1,000   0,153   164         34\n",
-       "\n",
-       "[5 rows x 14 columns]"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "metadata_df = pd.read_csv(\"data/network_metadata.tab\", sep=\"\\t\")\n",
     "metadata_df.loc[:, \"IMDB_id\"] = metadata_df[\"IMDB_id\"].str[2:].astype('int')\n",
-    "metadata_df.head()"
+    "# metadata_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -211,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,128 +211,6 @@
     "H=nx.relabel_nodes(Writers_Graph, mapping)\n",
     "nx.write_adjlist(H, \"data/writers_graph.adjlist\")\n",
     "'''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1461\n"
-     ]
-    }
-   ],
-   "source": [
-    "# print(len(Writers_Graph))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def draw_connection_with_edges(G, min_weight=None, max_weight=None, figsize=None, layout=None,\n",
-    "                               c=100, font_size=16, font_color='orange'):\n",
-    "    if figsize is not None:\n",
-    "        plt.figure(figsize=figsize)\n",
-    "        \n",
-    "    pos = layout or nx.random_layout(G)\n",
-    "    \n",
-    "    weights = {(u, v): d[\"weight\"] for (u, v, d) in G.edges(data=True)}\n",
-    "    if min_weight is not None:\n",
-    "        weights = {k: v for k, v in weights.items() if v > min_weight}\n",
-    "    if max_weight is not None:\n",
-    "        weights = {k: v for k, v in weights.items() if v <= max_weight}\n",
-    "    filtered_edges = list(weights.keys())\n",
-    "    \n",
-    "    t = np.array(list(weights.values()))\n",
-    "    normalized_weights = c*t/t.sum()\n",
-    "\n",
-    "    nx.draw(G, pos=pos, edgelist=filtered_edges, font_color=font_color, width=normalized_weights,\n",
-    "            with_labels=True, font_weight='bold', font_size=font_size)\n",
-    "\n",
-    "    nx.draw_networkx_edge_labels(G,\n",
-    "                                 pos=pos,\n",
-    "                                 edge_labels=weights)\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# draw_connection_with_edges(Writers_Graph, min_weight=2, c=10, font_size=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Steven Spielberg, degree: 22\n",
-      "Ridley Scott, degree: 20\n",
-      "Ronald Shusett, degree: 19\n",
-      "David Koepp, degree: 19\n",
-      "Dan O'Bannon, degree: 17\n",
-      "Michael Mann, degree: 16\n",
-      "Brian De Palma, degree: 16\n",
-      "James Cameron, degree: 15\n",
-      "David Fincher, degree: 15\n",
-      "George Lucas, degree: 15\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Writers ordered by most connections\n",
-    "all_writers = list(Writers_Graph.nodes())\n",
-    "all_writers_sorted = sorted(all_writers, key=lambda x: Writers_Graph.degree(x), reverse=True)                  \n",
-    "\n",
-    "for i in range(10):\n",
-    "    print(f\"{all_writers_sorted[i]}, degree: {Writers_Graph.degree(all_writers_sorted[i])}\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Indiana Jones and the Kingdom of the Crystal Skull, degree: 22\n",
-      "Raiders of the Lost Ark, degree: 20\n",
-      "Mission: Impossible, degree: 20\n",
-      "Jurassic Park, degree: 18\n",
-      "The Lost World: Jurassic Park, degree: 18\n",
-      "War of the Worlds, degree: 18\n",
-      "Indiana Jones and the Last Crusade, degree: 17\n",
-      "Aliens, degree: 16\n",
-      "Indiana Jones and the Temple of Doom, degree: 16\n",
-      "Minority Report, degree: 16\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Movies ordered by most connections\n",
-    "all_movies = list(Movies_Graph.nodes())\n",
-    "all_movies_sorted = sorted(all_movies, key=lambda x: Movies_Graph.degree(x), reverse=True)                  \n",
-    "\n",
-    "for i in range(10):\n",
-    "    print(f\"{all_movies_sorted[i]}, degree: {Movies_Graph.degree(all_movies_sorted[i])}\")\n"
    ]
   },
   {
